{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 21,
  "lineage": "2a582a9a-f407-9128-a92c-b2a956dbd37d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725347003:internet-gateway/igw-00ea54f4bcd56f195",
            "id": "igw-00ea54f4bcd56f195",
            "owner_id": "851725347003",
            "tags": {
              "Name": "turnos-igw"
            },
            "tags_all": {
              "Name": "turnos-igw"
            },
            "vpc_id": "vpc-0794adcd8df3df8d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.turnos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725347003:route-table/rtb-0a8515fbf772f4b0c",
            "id": "rtb-0a8515fbf772f4b0c",
            "owner_id": "851725347003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ea54f4bcd56f195",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "turnos-public-rt"
            },
            "tags_all": {
              "Name": "turnos-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0794adcd8df3df8d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.turnos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53e55144b8a440c",
            "route_table_id": "rtb-0a8515fbf772f4b0c",
            "subnet_id": "subnet-004d829f530741eae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.turnos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725347003:security-group/sg-0d63db2f81da759d9",
            "description": "Security Group de la API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d63db2f81da759d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP API",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "turnos-api-sg",
            "name_prefix": "",
            "owner_id": "851725347003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "turnos-api-sg"
            },
            "tags_all": {
              "Name": "turnos-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0794adcd8df3df8d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.turnos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725347003:subnet/subnet-004d829f530741eae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004d829f530741eae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725347003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "turnos-public-subnet"
            },
            "tags_all": {
              "Name": "turnos-public-subnet"
            },
            "vpc_id": "vpc-0794adcd8df3df8d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.turnos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "turnos_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725347003:vpc/vpc-0794adcd8df3df8d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08205c338d3fff645",
            "default_route_table_id": "rtb-0285584775b492dcc",
            "default_security_group_id": "sg-0a6347e8654f1fd9c",
            "dhcp_options_id": "dopt-00878c7659fb9be27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0794adcd8df3df8d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0285584775b492dcc",
            "owner_id": "851725347003",
            "tags": {
              "Name": "turnos-vpc"
            },
            "tags_all": {
              "Name": "turnos-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}